force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Evaluation__c/TimeTrade_SF1__TimeTrade_Workflow_Evaluation__c.object-meta.xml
<CustomObject>
    <label>TimeTrade Routing Evaluation Log</label>
    <nameField>
        <displayFormat>WE - {0000000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TimeTrade Routing Evaluation Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>