force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Evaluation__c/fields/TimeTrade_SF1__Invitation__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Invitation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invitation</label>
    <referenceTo>TimeTrade_SF1__Invitation__c</referenceTo>
    <relationshipName>TimeTrade_Workflow_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>