force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Evaluation__c/fields/TimeTrade_SF1__Response_Values__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Response_Values__c</fullName>
    <label>Response Values Internal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>