force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Evaluation__c/fields/TimeTrade_SF1__Response_Values_QuesResPair__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Response_Values_QuesResPair__c</fullName>
    <label>Response Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>