force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Evaluation__c/fields/TimeTrade_SF1__Selected_Route__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Selected_Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This shows the routing route which routes the evaluation log record to the most apt invitation</description>
    <label>Selected Route</label>
    <referenceTo>TimeTrade_SF1__TimeTrade_Workflow_Route__c</referenceTo>
    <relationshipLabel>TimeTrade Routing Evaluation Logs</relationshipLabel>
    <relationshipName>TimeTrade_Routing_Evaluation_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>