force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Evaluation__c/fields/TimeTrade_SF1__User_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__User_IP_Address__c</fullName>
    <description>This may be useful for tracking who is loading your questionnaire page.</description>
    <inlineHelpText>This may be useful for tracking who is loading your questionnaire page.</inlineHelpText>
    <label>User IP Address</label>
    <length>32</length>
    <type>Text</type>
</CustomField>