force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Evaluation__c/listViews/TimeTrade_SF1__All.listView-meta.xml
<ListView>
    <fullName>TimeTrade_SF1__All</fullName>
    <columns>NAME</columns>
    <columns>TimeTrade_SF1__Schedule_Workflow__c</columns>
    <columns>TimeTrade_SF1__Response_Values_QuesResPair__c</columns>
    <columns>TimeTrade_SF1__Invitation__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>